--- a/Lamy/style/style.css
+++ b/Lamy/style/style.css
@@ -1,10 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
 
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 :root {
     --bg-color: #F5F5F5;
     --text-color: #404040;
     --white: #fff;
+    --highlight-color: #1a1a1a;
 }
 
 a {
@@ -36,6 +44,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 1em 0em;
     /* max-width: 80%;
     width: 100%;
     margin: auto; */
@@ -102,6 +111,7 @@ body {
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(4, 1fr);
     gap: 1em;
+    padding: 1em 0em;
     /* max-height: 100vh; */
 }
 
@@ -117,8 +127,80 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-
+    letter-spacing: 0%;
+    padding: 1.5em;
 }
+
+.grid_item-1 h1 {
+    line-height: 1.1;
+    font-weight: 600;
+    font-size: 3.2rem;
+    margin-bottom: 0.3em;
+}
+
+.grid_item-1 button,
+.grid_item-3 button {
+    all: unset;
+    background-color: var(--highlight-color);
+    color: var(--white);
+    font-size: 1rem;
+    padding: 0.8em 1em;
+    margin-right: 0.7rem;
+    border-radius: 37px;
+}
+
+.grid_item-1 button:nth-child(2) {
+    transform: rotate(40deg);
+    font-weight: 600;
+}
+
+.grid_item-1 p {
+    line-height: 1.5;
+    font-size: 1.1rem;
+}
+
+.grid_item-1 div:nth-child(3) {
+    display: flex;
+}
+
+.grid_item-1 div:nth-child(3)>div:nth-child(1) h3 {
+    margin-bottom: 0.4em;
+    font-size: 1.5rem;
+}
+
+.grid_item-1 div:nth-child(3)>div:nth-child(1) {
+    flex: 1.4;
+    font-size: 1rem;
+}
+
+.grid_item-1 div:nth-child(3)>div:nth-child(2) {
+    flex: 0.6;
+    position: relative;
+}
+
+.grid_item-1 div:nth-child(3)>div:nth-child(2)>img {
+    position: absolute;
+    bottom: 8px;
+    right: 0px;
+    z-index: 4;
+}
+
+
+.grid_item-1 div:nth-child(3)>div:nth-child(2)>img:nth-child(2) {
+    right: 2.2rem;
+    z-index: 3;
+}
+
+.grid_item-1 div:nth-child(3)>div:nth-child(2)>img:nth-child(3) {
+    right: 4.4rem;
+    z-index: 2;
+}
+
+.grid_item-1 div:nth-child(3)>div:nth-child(2)>img:nth-child(4) {
+    right: 6.4rem;
+    z-index: 1;
+}
+
 
 .grid_item-2 {
     grid-area: 1 / 3 / 4 /5;
@@ -127,8 +209,9 @@ body {
     background: -moz-linear-gradient(180deg, rgba(215, 235, 235, 1) 0%, rgba(244, 175, 233, 1) 36%, rgba(157, 126, 243, 1) 78%);
     background: linear-gradient(180deg, rgba(215, 235, 235, 1) 0%, rgba(244, 175, 233, 1) 36%, rgba(157, 126, 243, 1) 78%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#D7EBEB", endColorstr="#9D7EF3", GradientType=0);
-
 }
+
+
 
 
 .grid_item-3 {
@@ -136,9 +219,74 @@ body {
     grid-row: span 1;
     display: flex;
     justify-content: space-between;
-    background-color: #404040;
+    gap: 1em;
+    /* background-color: #404040; */
+}
+
+.grid_item-3 div,
+.grid_item-3 div>img {
+    border-radius: 37px;
+    background-color: var(--white);
+}
+
+.grid_item-3 div>img {
+    max-width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.grid_item-3 div:nth-child(3) {
+    padding: 1.8em;
+    font-size: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+}
+
+.grid_item-3 div h3 {
+    font-size: 1.5rem;
+    margin-bottom: 0.5em;
+    line-height: 1.2;
 }
 
 
+
+
+/*--------------------------------------------------------------------------------------------------------------------------------------------*/
+
+
+/*  Section Product */
+.section_product {
+    padding: 3em 0em;
+}
+
+.section_product h2 {
+    margin-left: 0.4em;
+    font-size: 1.6rem;
+}
+
+.section_product>div:nth-child(1) {
+    margin-bottom: 1em;
+}
+
+
+.section_product .section_product_List>div:nth-child(2) {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+.section_product .catergory h6 {
+    font-size: 1.1rem;
+    font-weight: 400;
+    margin-left: 0.4em;
+}
+
+.section_product .catergory img {
+    border-radius: 37px;
+    margin-bottom: 1em;
+}
 
 /*--------------------------------------------------------------------------------------------------------------------------------------------*/
