--- a/lib_mang/style/style.css
+++ b/lib_mang/style/style.css
@@ -83,3 +83,33 @@ body {
     background-color: #2c3e50;
     box-shadow: 4px 3px 5px rgba(0, 0, 0, 0.5);
 }
+
+
+/* book container css */
+
+#book-collection {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 2em;
+}
+
+.book-item {
+    background-color: #ffffff;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    padding: 1em;
+    margin: 1em;
+    width: calc(25% - 2em);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.book-item h3 {
+    margin-top: 0;
+    font-size: 1.5em;
+    color: #35424a;
+}
+
+.book-item p {
+    margin: 0.5em 0;
+}
